system_testでログインができるように調整中

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -6,6 +6,9 @@
 #
 # one: {}
 # column: value
+alice:
+  email: alice@example.com
+  encrypted_password: <%= Devise::Encryptor.digest(User, 'password') %>
 #
 # two: {}
 # column: value
