--- a/test/fixtures/books.yml
+++ b/test/fixtures/books.yml
@@ -1,8 +1,9 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-# one:
-#   title: MyString
-#   memo: MyText
+one:
+  title: プロを目指す人のためのRuby入門
+  memo: Rubyの登竜門
+  author: jnchito
 
 # two:
 #   title: MyString
