testユーザーを追加してエラーになったので、コメントアウトして以後対応

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -8,6 +8,6 @@ alice:
   email: alice@example.com
   encrypted_password: <%= Devise::Encryptor.digest(User, 'password') %>
 #
-bob:
-  email: alice@example.com
-  encrypted_password: <%= Devise::Encryptor.digest(User, 'password') %>
+# bob:
+#   email: alice@example.com
+#   encrypted_password: <%= Devise::Encryptor.digest(User, 'password') %>
