--- a/test/fixtures/reports.yml
+++ b/test/fixtures/reports.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
+report_one:
   user: alice
   title: 初めて自動テスト
   content: やるべきテストの書き方がわからず困惑した。
 
-two:
+report_two:
   user: alice
   title: 自動テスト面白くなってきた
   content: まだまだわからないことが多いけど
